@@ -150,10 +150,10 @@ if($sub=='Submit' and $recipients and sizeof($recipients)>0 and !isset($error)){
 	/* Sending SMS Text messages.... */
 	elseif(isset($CFG->smsoff) and $CFG->smsoff=='no' and $messageop=='sms'){
 
-		$messagebody=str_replace("'",'',$messagebody);
+		$messagebody=str_replace("'",'',$messageb);
 		$messagetxt=iconv('UTF-8','ISO-8859-1',$messagebody);
 
-		foreach($recipients as $key => $recipient){
+		foreach($recipients as $recipient){
 
 			$sms_result=send_sms_to($recipient['mobile'],$messagetxt);
 
